<resources>
    <string name="app_name">CopFinder</string>
    <string name="button_next">Next Activity</string>
    <string name="button_previous">Prev Activity</string>
    <string name="Hello_World">Hello World!</string>
    <string name="OpenMapsTitle">OpenStreetMaps</string>
    <string name="Settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_list">Collection</string>
    <string name="title_config">Settings</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>