<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/light_gray">

    <Button
        android:id="@+id/mainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/purple_200"
        android:backgroundTintMode="src_atop"
        android:onClick="onNextButtonClick"
        android:text="@string/button_next" />

    <Button
        android:id="@+id/mainButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:backgroundTintMode="src_atop"
        android:onClick="onNextOSMButtonClick"
        android:text="@string/OpenMapsTitle"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/map"
        android:textAllCaps="false"
        android:drawablePadding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="50dp"/>

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:backgroundTintMode="src_atop"
        android:onClick="onNextSettingsButtonClick"
        android:text="@string/Settings"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/settings"
        android:textAllCaps="false"
        android:drawablePadding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="35dp"/>

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_300"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hello_World"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/mainButton"
        />

</RelativeLayout>
